<resources>
    <string name="app_name">Jakoub_Tour</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="main">Главная</string>
    <string name="list_country">Список стран</string>
    <string name="news">Новости</string>
    <string name="uslugi">Услуги</string>
    <string name="dop">Дополнительно</string>
    <string name="settings">Настройки</string>
    <string name="aboutapp">О приложении</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello  fragment</string>
</resources>
