<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/main" />
        <item
            android:id="@+id/nav_lc"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/list_country" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_uslugi"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/uslugi" />
    </group>

    <item android:title="@string/dop">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_aboutapp"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/aboutapp" />
        </menu>
    </item>

</menu>
